; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/extr_ixp4xx_crypto.c_ablk_rfc3686_setkey.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/extr_ixp4xx_crypto.c_ablk_rfc3686_setkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_ablkcipher = type { i32 }
%struct.ixp_ctx = type { i32 }

@CTR_RFC3686_NONCE_SIZE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_ablkcipher*, i32*, i32)* @ablk_rfc3686_setkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ablk_rfc3686_setkey(%struct.crypto_ablkcipher* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.crypto_ablkcipher*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.ixp_ctx*, align 8
  store %struct.crypto_ablkcipher* %0, %struct.crypto_ablkcipher** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.crypto_ablkcipher*, %struct.crypto_ablkcipher** %5, align 8
  %10 = call %struct.ixp_ctx* @crypto_ablkcipher_ctx(%struct.crypto_ablkcipher* %9)
  store %struct.ixp_ctx* %10, %struct.ixp_ctx** %8, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @CTR_RFC3686_NONCE_SIZE, align 4
  %13 = icmp ult i32 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %4, align 4
  br label %36

17:                                               ; preds = %3
  %18 = load %struct.ixp_ctx*, %struct.ixp_ctx** %8, align 8
  %19 = getelementptr inbounds %struct.ixp_ctx, %struct.ixp_ctx* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @CTR_RFC3686_NONCE_SIZE, align 4
  %24 = sub i32 %22, %23
  %25 = zext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %21, i64 %25
  %27 = load i32, i32* @CTR_RFC3686_NONCE_SIZE, align 4
  %28 = call i32 @memcpy(i32 %20, i32* %26, i32 %27)
  %29 = load i32, i32* @CTR_RFC3686_NONCE_SIZE, align 4
  %30 = load i32, i32* %7, align 4
  %31 = sub i32 %30, %29
  store i32 %31, i32* %7, align 4
  %32 = load %struct.crypto_ablkcipher*, %struct.crypto_ablkcipher** %5, align 8
  %33 = load i32*, i32** %6, align 8
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @ablk_setkey(%struct.crypto_ablkcipher* %32, i32* %33, i32 %34)
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %17, %14
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local %struct.ixp_ctx* @crypto_ablkcipher_ctx(%struct.crypto_ablkcipher*) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i32 @ablk_setkey(%struct.crypto_ablkcipher*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
